change css to use root urls, add deploy script

--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -1,5 +1,5 @@
 {{ define "head" }}
-    <link rel="stylesheet" href="{{ absURL "css/single.css" }}">
+    <link rel="stylesheet" href="{{ "/css/single.css" }}">
 {{ end }}
 
 {{ define "header" }}
