--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,5 +1,5 @@
 {{ define "head" }}
-    <link rel="stylesheet" href="{{ absURL "css/index.css" }}">
+    <link rel="stylesheet" href="{{ "/css/index.css" }}">
 {{ end }}
 
 {{ define "header" }}
