--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -14,7 +14,7 @@
 <link rel="canonical" href="{{ .Permalink }}"/>
 
 {{ range (slice "normalize.css" "main.css") }}
-<link rel="stylesheet" href="{{ printf "css/%s" . | absURL }}"  crossorigin="anonymous">{{ end }}
+<link rel="stylesheet" href="{{ printf "/css/%s" . }}"  crossorigin="anonymous">{{ end }}
 
 <style>
     @import url('https://fonts.googleapis.com/css?family=Open+Sans:400,400i,700&display=swap');
